--- a/src/style/main.css
+++ b/src/style/main.css
@@ -9,3 +9,110 @@ body,
     height: 100%;
     background: ivory;
 }
+
+/**
+ * Interface
+ */
+.interface {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    font-family: Creepster, cursive;
+}
+
+.interface-gems-counter {
+    position: absolute;
+    top: 2%;
+    right: 0%;
+    width: 50%;
+    color: #fc8914;
+    font-size: 6vh;
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(39,44,56,1) 450%);
+    padding: 20px;
+    text-align: right;
+    user-select: none;
+}
+
+.interface-post-game {
+    position: absolute;
+    top: 20%;
+    width: 100%;
+    color: #fc8914;
+    background: rgba(39,44,56, 0.7);
+    text-align: center;
+    padding-bottom: 12px;
+}
+
+.interface-post-game-title {
+    font-size: 12vh;
+    margin: 5px;
+}
+
+.interface-post-game-sentence {
+    font-size: 4vh;
+}
+
+.interface-post-game-link {
+    color:#ffa052;
+    text-decoration: none;
+}
+
+.interface-post-game-link:hover {
+    cursor: pointer;
+}
+
+.interface-post-game-icon-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.interface-post-game-icon {
+    height: 6vh;
+    margin: 0 20px 0 20px;
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+.interface-post-game-close {
+    width: 20%;
+    pointer-events: auto;
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-family: Creepster, cursive;
+    color: #fc8914;
+    font-size: 3vh
+}
+
+.interface-post-game-hide {
+    width: 20%;
+    pointer-events: auto;
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-family: Creepster, cursive;
+    color: #fc8914;
+    font-size: 3vh
+}
+
+.interface-post-game-buttons-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
+
+.interface-post-game-reload {
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    padding-right: 10px;
+    font-family: Creepster, cursive;
+    color: #fc8914;
+    font-size: 3vh
+}
