--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,7 +1,6 @@
 html,
 body,
-#root
-{
+#root {
     position: fixed;
     top: 0;
     left: 0;
@@ -24,6 +23,28 @@ body,
     font-family: Creepster, cursive;
 }
 
+.interface-credits {
+    position: absolute;
+    bottom: 0;
+    left: 1%;
+    color: #fc8914;
+}
+
+.interface-sound {
+    position: absolute;
+    bottom: 3%;
+    right: 1%;
+    border: 1px solid #fc8914;
+    border-radius: 50%;
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+.interface-sound-icon {
+    height: 30px;
+    margin: 10px;
+}
+
 .interface-gems-counter {
     position: absolute;
     top: 2%;
@@ -31,7 +52,7 @@ body,
     width: 50%;
     color: #fc8914;
     font-size: 6vh;
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(39,44,56,1) 450%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(39, 44, 56, 1) 450%);
     padding: 20px;
     text-align: right;
     user-select: none;
@@ -42,7 +63,7 @@ body,
     top: 20%;
     width: 100%;
     color: #fc8914;
-    background: rgba(39,44,56, 0.7);
+    background: rgba(39, 44, 56, 0.7);
     text-align: center;
     padding-bottom: 12px;
 }
@@ -57,7 +78,7 @@ body,
 }
 
 .interface-post-game-link {
-    color:#ffa052;
+    color: #ffa052;
     text-decoration: none;
 }
 
@@ -115,4 +136,86 @@ body,
     font-family: Creepster, cursive;
     color: #fc8914;
     font-size: 3vh
+}
+
+/**
+ * Loading Screen
+ */
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #030917;
+    background-image: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 8s;
+    z-index: 1;
+    font-family: Creepster, cursive;
+    user-select: none;
+    pointer-events: none;
+}
+
+.loading-screen-board {
+    padding: 64px;
+    text-align: center;
+}
+
+.loading-screen-title {
+    font-size: 4rem;
+    color: #fc8914;
+    margin: 0;
+    margin-bottom: 8px;
+}
+
+.loading-screen-button {
+    padding: 8px 32px;
+    background-color: #030917;
+    color: #fc8914;
+    border: solid 2px #fc8914;
+    font-weight: bold;
+    font-size: 2.5rem;
+    border-radius: 8px;
+    transition: background-color 0.4s;
+    font-family: Creepster, cursive;
+    pointer-events: auto;
+}
+
+.loading-screen-button:hover {
+    background-color: #131f3b;
+    cursor: pointer;
+}
+
+.loading-screen-button:disabled {
+    opacity: 0.3;
+    cursor: not-allowed;
+}
+
+.loading-screen-progress {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 12px;
+}
+
+.loading-screen-progress-value {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #fc8914;
+    transition: width 0.4s;
+}
+
+.loading-screen-started {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.loading-screen-started .loading-screen-board {
+    opacity: 0;
 }
