--- a/src/style/main.css
+++ b/src/style/main.css
@@ -150,7 +150,8 @@ body,
 
 .interface-post-game-buttons-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    margin: 0 30% 0 30%;
     padding-top: 15px;
     padding-bottom: 10px;
 }
@@ -158,7 +159,7 @@ body,
 .interface-post-game-reload {
     position: absolute;
     bottom: 0%;
-    right: 0%;
+    right: 8%;
     padding-right: 10px;
     font-family: Creepster, cursive;
     color: #fc8914;
